log
Thu 21 Mar 2024 09:34:28 PM UTC: 
 tests:  0|5
total_score: 0/70
92e3093
Thu 21 Mar 2024 09:58:15 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
2f266bd
Thu 21 Mar 2024 09:58:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
38d5276
Thu 21 Mar 2024 10:01:40 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:18: error: invalid use of undefined type ‘struct List’
   63 |     sumaElem += L[i];
      |                  ^
exercises.c:63:17: error: invalid use of incomplete typedef ‘List’
   63 |     sumaElem += L[i];
      |                 ^
Compilation failed
3412063
Thu 21 Mar 2024 10:02:26 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:20: error: invalid use of undefined type ‘struct List’
   63 |     sumaElem += *(L[i]);
      |                    ^
exercises.c:63:18: error: invalid use of incomplete typedef ‘List’
   63 |     sumaElem += *(L[i]);
      |                  ^
Compilation failed
19c23cc
Thu 21 Mar 2024 10:08:06 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:14: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   64 |     sumaElem += elem;
      |              ^~
cc1: all warnings being treated as errors
Compilation failed
6152dd9
Thu 21 Mar 2024 10:08:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
d20592f
Thu 21 Mar 2024 10:17:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 20/70
4a88f6c
Thu 21 Mar 2024 10:17:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:102:11: error: ‘true’ undeclared (first use in this function)
  102 |    return true;
      |           ^~~~
exercises.c:8:1: note: ‘true’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    7 | #include "stack.h"
  +++ |+#include <stdbool.h>
    8 | 
exercises.c:102:11: note: each undeclared identifier is reported only once for each function it appears in
  102 |    return true;
      |           ^~~~
exercises.c:103:1: error: control reaches end of non-void function [-Werror=return-type]
  103 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
daf10d0
Thu 21 Mar 2024 10:17:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
ada0290
Thu 21 Mar 2024 10:20:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
0f78676
Thu 21 Mar 2024 10:21:39 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|3
total_score: 20/70
2eccf15
Thu 21 Mar 2024 10:28:36 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:81:7: error: unused variable ‘sumaElem’ [-Werror=unused-variable]
   81 |   int sumaElem = 0;
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0687136
Thu 21 Mar 2024 10:28:46 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|2
total_score: 40/70
4de5d7a
Thu 21 Mar 2024 10:29:41 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 40/70
4801fb4
Sat 23 Mar 2024 12:46:38 AM UTC: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  6|2
total_score: 50/70
69d4ee5
Sat 23 Mar 2024 12:50:50 AM UTC: 
 exercises.c | 22 ++++++++++++++++------
 1 file changed, 16 insertions(+), 6 deletions(-)
 tests:  3|2
total_score: 40/70
1e82108
Sat 23 Mar 2024 12:54:15 AM UTC: 
 exercises.c | 19 +++++++++++++------
 1 file changed, 13 insertions(+), 6 deletions(-)
 tests:  5|2
total_score: 50/70
de9293a
Sat 23 Mar 2024 12:57:04 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 50/70
7fe18d7
Sat 23 Mar 2024 01:14:00 AM UTC: 
 exercises.c | 40 ++++++++++++++--------------------------
 1 file changed, 14 insertions(+), 26 deletions(-)
 tests:  3|2
total_score: 40/70
73695fa
Sat 23 Mar 2024 01:20:04 AM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:117:15: error: ‘texto’ undeclared (first use in this function)
  117 |       switch (texto[i]) {
      |               ^~~~~
exercises.c:117:15: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
2af03c6
